--- a/frontend/react-drs/package.json
+++ b/frontend/react-drs/package.json
@@ -24,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "react-tinder-card": "^1.6.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
